# gline-rs

./: Cargo.toml  Readme.md
.ci/workflows/: ci.yaml
.github/workflows/: ci.yaml
data/: nuner-sample-1k.csv
doc/: Changelog.md  Model.md  ORT.md  Processing.typ
models/: Readme.md
src/: lib.rs
src/examples/: benchmark.rs  benchmark_cpu.rs  benchmark_gpu.rs  gpu.rs  relation_extraction.rs  span_mode.rs  token_mode.rs
src/model/: mod.rs  params.rs
src/model/inference/: composable.rs  mod.rs
src/model/input/: encoded.rs  mod.rs  prompt.rs  text.rs  tokenized.rs
src/model/input/relation/: mod.rs  schema.rs
src/model/input/tensors/: mod.rs  span.rs  token.rs
src/model/output/: mod.rs  relation.rs  tensors.rs
src/model/output/decoded/: greedy.rs  mod.rs  sort.rs  span.rs  token.rs  token_flat.rs
src/model/pipeline/: composable.rs  context.rs  mod.rs  relation.rs  span.rs  token.rs
src/text/: mod.rs  prompt.rs  span.rs  splitter.rs  token.rs  tokenizer.rs
src/util/: compose.rs  error.rs  math.rs  mod.rs  result.rs
