[package]
name = "gline-rs"
authors = ["Frédérik Bilhaut <frederik.bilhaut@gmail.com>"]
version = "0.9.3-SNAPSHOT"
edition = "2021"
license = "Apache-2.0"
keywords = ["NLP", "NER", "GLiNER", "Transformer"]
readme = "./Readme.md"
description = "Inference engine for GLiNER models"
homepage = "https://github.com/fbilhaut/gline-rs"
repository = "https://github.com/fbilhaut/gline-rs"
documentation = "https://docs.rs/gline-rs/"
exclude = [ "data", "models" ]

[lib]
name = "gliner"
path = "src/lib.rs"

[[example]]
name = "token-mode"
path = "src/examples/token_mode.rs"

[[example]]
name = "span-mode"
path = "src/examples/span_mode.rs"

[[example]]
name = "relation-extraction"
path = "src/examples/relation_extraction.rs"

[[example]]
name = "benchmark-cpu"
path = "src/examples/benchmark_cpu.rs"

[[example]]
name = "benchmark-gpu"
path = "src/examples/benchmark_gpu.rs"

[dependencies]
composable = "0.9.0"
regex = "1.11.1"
ort = { version="=2.0.0-rc.9" }
tokenizers = { version="0.21.0", features=["http"] }
ndarray = "0.16.0"
csv = "1.3"

[features]
default = []
load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
xnnpack = ["ort/xnnpack"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]

#[lints.clippy]
#unwrap_used = "warn"